cmake_minimum_required(VERSION 3.13)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode main.c 1.c 15.c 16.c 18.c HappyNumber.c 4.c numDifferenceDigits.c
        least1bit.c 2.c 3.c 5.c 7.c 11.c 36.c 37.c 21.c 23.c 24.c 26.c 25.c 91.c 136.c 31.c 242.c spinlock.c 6.c
        94.c 96.c 10.c 144.c 98.c 95.c 191.c 32.c 42.c 151.c 152.c 100.c 101.c 33.c 81.c 55.c 45.c 122.c 121.c common.h
        53.c 62.c 63.c 52.c 51.c 105.c 102.c 70.c 112.c mcs_lock.c 46.c 78.c 50.c 9.c 47.c 49.cpp 48.c 39.cpp 40.cpp
        41.c 27.c 8.c 12.c 13.c 14.c 17.cpp 19.c 20.cpp 22.cpp 28.c 29.c 30.cpp 34.c 35.c 38.cpp 43.c 44.c 54.c 56.cpp
        57.cpp 58.c 59.c 60.cpp 61.c 64.c 66.cpp 67.c 68.cpp 75.c 90.cpp 72.c 99.c 97.c 92.c 77_bfs.cpp 77_dfs.cpp 69.c
        83.c 88.c 73.c 71.cpp 74.cpp 76.cpp 406.cpp 475.c 93.cpp 206.c 89.cpp 87.c 86.c 80.c 82.c 1365.c 315.c 84.cpp 79.c
        85.cpp 104.cpp 1935.cpp 1936.c 1937.cpp 1938.c 1941.c 1942.cpp 1943.cpp 150.cpp 149.cpp 103.cpp 107.cpp 145.cpp 110t.cpp 110.cpp 106.c 108.c
        111.cpp 109.cpp 113.cpp 114.cpp 115.c 116.cpp 118.cpp 119.cpp 120.cpp 123.c 125.c 2103.c 2104.c 2105.c 2106.c
        127.cpp 126.cpp 128.cpp 129.cpp 130.cpp 300.c 2111.c)